SonarQube (Maintainability: Medium) "Remove this unused method parameter "flight"."Also removed duplication of code 21 words long" [Solved]